--- a/public/stylesheets/collection.css
+++ b/public/stylesheets/collection.css
@@ -1,3 +1,9 @@
+
+
+.hide{
+    display: none;
+}
+
 /* loading styling */
 
 #loading-div {
