--- a/public/stylesheets/forms.css
+++ b/public/stylesheets/forms.css
@@ -69,13 +69,13 @@ main{
 
 /* change input shadow */
 .form-control:focus {
-  border-color: #28a745;
+  border-color: #069;
   box-shadow: 0 0 0 0.2rem rgba(40, 167, 69, 0.25);
 } 
 
 /* change checkbox color */
 .form-check-input:checked {
-  background-color: green !important;
+  background-color: #069;
   box-shadow: none;
 }
 .form-check-input:focus {
@@ -83,7 +83,7 @@ main{
 }
 
 .form-control:focus, .bootstrap-select, .btn:focus  {
-  border-color: green;
+  border-color: rgba(40, 99, 128, 0.761);;
   outline: 0;
   -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.075),0 0 8px rgba(102,175,233,.6);
   box-shadow: inset 0 1px 1px rgba(0,0,0,.075),0 0 8px rgba(102,175,233,.6);
